--- a/foundations/02-class-id-selectors/style.css
+++ b/foundations/02-class-id-selectors/style.css
@@ -2,3 +2,8 @@
     background-color: rgb(252,148,150);
     font-family: "Verdana", "DejaVu Sans", sans-serif;  
 }
+
+#second {
+    font-size: 36px;
+    color: RGB(14, 0, 254);
+}
