--- a/foundations/02-class-id-selectors/style.css
+++ b/foundations/02-class-id-selectors/style.css
@@ -7,3 +7,9 @@
     font-size: 36px;
     color: RGB(14, 0, 254);
 }
+
+#fourth {
+    font-size: 24px;
+    font-weight: bold;
+    background-color: RGB(114, 255, 109);
+}
