--- a/foundations/03-grouping-selectors/style.css
+++ b/foundations/03-grouping-selectors/style.css
@@ -1,12 +1,14 @@
-.button-one {
+.one,
+.two {
+    font-family: "Helvetica", "Times New Roman", sans-serif;
     font-size: 28px;
-    font-family: "helvetica", "Times New Roman", sans-serif;
+}
+
+.one {
     background-color: black;
     color: white;
 }
 
-.button-two {
-    font-size: 28px;
-    font-family: "helvetica", "Times New Roman", sans-serif;
+.two {
     background-color: yellow;
 }
